# pull-request-template-analyzer

./: .travis.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-poetry.yml
src/data_collection/: github_collector.py
src/utils/: logger.py
tests/data_collection/: test_github_collector.py
